--- a/website/templates/main/login.html
+++ b/website/templates/main/login.html
@@ -2,59 +2,58 @@
 {% block contents %}
 
     <!-- main top bar -->
-
- 
     <div class="breadcrumb">
-        <div class="container">
-          <div class="breadcrumb-inner">
-            <ul class="list-inline list-unstyled">
-              <li><a href="index.html">Home</a></li>
-              <li class='active'>Login</li>
-            </ul>
-          </div><!-- /.breadcrumb-inner -->
-        </div><!-- /.container -->
-      </div><!-- /.breadcrumb -->
-    
-    
-    
-      <!-- ............................login........................... -->
-      <div class="login-admin">
-        <div class="screen-1">
-          <div class="circle"><img src="assets/images/blank-profile.webp" alt=""></div>
-          <div class="email">
-            <label for="email">Email Address</label>
-            <div class="sec-2">
-              <ion-icon name="mail-outline"></ion-icon>
-              <input type="email" name="email" placeholder="Username@gmail.com" />
-            </div>
+      <div class="container">
+        <div class="breadcrumb-inner">
+          <ul class="list-inline list-unstyled">
+            <li><a href="/">Home</a></li>
+            <li class='active'>Login</li>
+          </ul>
+        </div><!-- /.breadcrumb-inner -->
+      </div><!-- /.container -->
+    </div><!-- /.breadcrumb -->
+  
+  
+  
+    <!-- ............................login........................... -->
+  
+    <div class=" loginPage">
+      <form class="loginFrom" action="{% url 'user_login' %}" method="post" >
+        {% csrf_token %}
+          <h2 class="loginTitle">Maxima Collection</h2>
+          <div class=" LoginFormContainer">
+              <h4>Sign-In</h4>
+              <div class="inputBoxLogin">
+                  <input label="Email" name="email" type="text" placeholder="smc@gmail.com" />
+              </div>
+  
+              <div class="inputBoxLogin">
+                  <input label="Password" name="password" type="password"
+                      placeholder="password" />
+              </div>
+              <div class="inputBoxLogin">
+                
+                  <button type="submit">Continue</button>
+              </div>
           </div>
-          <div class="password">
-            <label for="password">Password</label>
-            <div class="sec-2">
-              <ion-icon name="lock-closed-outline"></ion-icon>
-              <input class="pas" type="password" name="password" placeholder="············" />
-              <i class="fa-solid fa-eye"></i>
-            </div>
+          <p>
+              Don't have an account ?
+              <a class="link" href="{% url "user_register" %}">
+              <span style="cursor: pointer;">SIGN UP</span>
+              </a>
+          </p>
+          <div class="terms">
+              By creating an account, you agree to Maxima Collection's Conditions of
+              Use and Privacy Notice.
           </div>
-          <button class="login">Login</button>
-          <div class="footer">
-            <a href="{% url 'user_register' %}">
-                <span>Sign up</span>
-            </a>
-            <a href="">
-                <span>Forgot Password?</span>
-            </a>
-        </div>
-          <div class="login-area">
-            <div class="loin-icon">
-              <h6><i class="fa-brands fa-google"></i>google</h6>
-            </div>
-            <div class="loin-icon">
-              <h6><i class="fa-brands fa-facebook"></i>Facebook</h6>
-            </div>
+          <div class="loginWithGoogle">
+              <p class="googleIconItem text-center">
+                  <i class="fa-brands fa-google"></i>
+                  <span onClick={loginGoogle}>Login with Google</span>
+              </p>
           </div>
-        </div>
-      </div>
+      </form>
+  </div>
  
 
 
